# student_dashboard

./: pyproject.toml
student_dashboard/: main.py
student_dashboard/api/endpoints/: announcements.py  progress_reports.py  schedules.py  students.py
student_dashboard/models/: announcement.py  progress_report.py  schedule.py  student.py
