[tool.poetry]
name = "student-dashboard"
version = "0.1.0"
description = ""
authors = ["Zeeshan Ghani <mzeeshanghani786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
pydantic = {extras = ["dotenv"], version = "^2.10.3"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
